# mono2

./: .gitignore  README.md  TODO.txt  pyproject.toml
experimentos/: .gitignore  Algorithms.py  CLAUDE.md  README.md  RegressionMethods.py  analyze_fairness_simple.py  anovaAnalysis.py  byMetric.py  byUser.py  chartGenerator.py  conftest.py  example_fairness.py  finalResult.py  finalResult2.py  finalResultFairnessRatioSplitter.py  finalResultSplitter.py  finalResultSplitterLite.py  gender.py  groupChartGenerator.py  groupsQualityResults.py  kmeans.py  latexTableGenerator.py  main.py  project_context.md  pyproject.toml  qualitySplitter.py  risk.py  run_fairness_evaluation.py  spliterView.py  test.py  test2.py  test_fairness_simple.py  test_visualization.py  user_item_predictions_count.csv  user_item_rating_counts_train_scikit.csv  visualize_fairness.py  vulnerableGroupResult.py  winRate.py  windowRatingsCount.py  windowUserCount.py
experimentos/Components/: Mensuring.py  RecommenderAlgorithms.py
experimentos/data/HybridPredictions copy/: addColumns.py  window_10_predictedAdaBoost.tsv  window_10_predictedBagging.tsv  window_10_predictedTweedie.tsv  window_11_predictedLinearSVR.tsv  window_11_predictedRandomForest.tsv  window_11_predictedTweedie.tsv  window_12_predictedBayesianRidge.tsv  window_13_predictedAdaBoost.tsv  window_13_predictedBagging.tsv  window_13_predictedGradientBoosting.tsv  (+76 more)
experimentos/scripts/: prepare_data.py  run_constituent_predictions.py  run_pipeline.py  run_post_processor.py  splitter_view.py
experimentos/src/: Recommender.py
(+19726 files in other folders)
