[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "recsys"
version = "0.1.0"
description = "Recommender system evaluation framework (MovieLens 1M)"
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "numpy",
    "scikit-learn",
    "scipy",
    "statsmodels",
    "matplotlib",
    "lenskit",
    "scikit-surprise",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
